Make gitconfig a template

--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -44,7 +44,7 @@
 	changed = green
 	untracked = cyan
 [core]
-	excludesfile = /Users/joliv/.gitignore
+	excludesfile = {{ .chezmoi.homeDir }}/.gitignore
 	editor = nvim
 	pager = less
 [merge]
