--- a/run_once_02-install-casks.sh.tmpl
+++ b/run_once_02-install-casks.sh.tmpl
@@ -1,7 +1,7 @@
 #!/bin/sh
 # Brewfile hash: {{ include "Brewfile" | sha256sum }}
 
-brew bundle
+brew bundle --file {{ .chezmoi.sourceDir }}/Brewfile
 
 {{ if not (env "ZSH") }}
 echo "Installing oh-my-zsh..."
