--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -1,10 +1,3 @@
-# Enable Powerlevel10k instant prompt. Should stay close to the top of ~/.zshrc.
-# Initialization code that may require console input (password prompts, [y/n]
-# confirmations, etc.) must go above this block; everything else may go below.
-if [[ -r "${XDG_CACHE_HOME:-$HOME/.cache}/p10k-instant-prompt-${(%):-%n}.zsh" ]]; then
-  source "${XDG_CACHE_HOME:-$HOME/.cache}/p10k-instant-prompt-${(%):-%n}.zsh"
-fi
-
 # Uncomment this line and the one at the end of the file to profile initialization
 # zmodload zsh/zprof
 
@@ -88,11 +81,8 @@ source $ZSH/oh-my-zsh.sh
 # ssh
 # export SSH_KEY_PATH="~/.ssh/rsa_id"
 
-# p10k prompt
-source $(brew --prefix)/opt/powerlevel10k/powerlevel10k.zsh-theme
-
-# RTX - tooling version manager
-eval "$(rtx activate zsh)"
+# Mise - tooling version manager
+eval "$(mise activate zsh)"
 
 rehash
 
@@ -193,8 +183,9 @@ alias gco='fzf-git-checkout'
 
 test -e "${HOME}/.iterm2_shell_integration.zsh" && source "${HOME}/.iterm2_shell_integration.zsh"
 
+eval "$(zoxide init zsh)"
+
+eval "$(starship init zsh)"
+
 # Uncomment this line and the one at the top of the file to profile initialization
 # zprof
-
-# To customize prompt, run `p10k configure` or edit ~/.p10k.zsh.
-[[ ! -f ~/.p10k.zsh ]] || source ~/.p10k.zsh
