Add `npm run` alias

--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -132,6 +132,7 @@ alias be="bundle exec"
 alias n=nvim
 alias ta="tmux new-session -A -s"
 alias tl="tmux ls"
+alias nr="npm run"
 ## Replace ls with exa and add some convenient shortcuts
 alias e="exa --group-directories-first"
 alias el="exa -l --group-directories-first"
